fix home page display issue on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -3,9 +3,6 @@ body {
 }
 
 .main-container {
-  height: 400px;
-  max-width: 800px;
-
   img {
     width: 240px;
     height: 240px;
